--- a/src/containers/Navbar/SideDrawer/DrawerToggleButton.css
+++ b/src/containers/Navbar/SideDrawer/DrawerToggleButton.css
@@ -1,4 +1,5 @@
 .toggle-button {
+  background-color: rgba(19, 19, 19, 0.6);
   outline: none !important;
   margin-top: 2px !important;
   margin-right: -20px !important;
@@ -14,6 +15,8 @@ span.sc-htpNat.sc-gqjmRU.fygmjP,
 span.sc-htpNat.sc-gqjmRU.fygmjP::before,
 span.sc-htpNat.sc-gqjmRU.fygmjP::after,
 span.sc-htpNat.sc-gqjmRU.fygmjP {
+  background: rgba(19, 19, 19, 0.6);
+  color: rgba(19, 19, 19, 0.6);
   width: 28px !important;
   height: 2px;
 }
@@ -21,6 +24,18 @@ span.sc-htpNat.sc-gqjmRU.fygmjP {
 span.sc-htpNat.sc-gqjmRU.hJasVL,
 span.sc-htpNat.sc-gqjmRU.hJasVL::before,
 span.sc-htpNat.sc-gqjmRU.hJasVL::after {
+  color: rgba(19, 19, 19, 0.6);
+  background-color: rgba(19, 19, 19, 0.6);
   width: 28px !important;
   height: 2px;
+}
+span.sc-dlfnbm.sc-iqHYGH.fPSnJB.ekpwJh,
+span.sc-dlfnbm.sc-iqHYGH.fPSnJB.ekpwJh::before,
+span.sc-dlfnbm.sc-iqHYGH.fPSnJB.ekpwJh::after {
+  background-color: #fff;
+}
+span.sc-dlfnbm.sc-iqHYGH.fPSnJB.dkGITB,
+span.sc-dlfnbm.sc-iqHYGH.fPSnJB.dkGITB::before,
+span.sc-dlfnbm.sc-iqHYGH.fPSnJB.dkGITB::after {
+  background-color: #fff;
 }
